
OSG News (most significant items from ChangeLog)
================================================


    Occlusion culling adding to the core OSG.

    osgParticle developed by Marco Jez adds support for a range of particle
    effects.

    osgSim a seperate add-on library adds support for navigational light points.
    
    Support for NodeKits.


26th April 2002 - osg-0.8.45.tar.gz

    >>> Support added for Solaris, texture cube mapping & muliple projections.
   
    The OpenSceneGraph now has a new Makefile system which supports all Unix
    compilation including the new addition to the family - Solaris!  

    OpenSceneGraph welcomes Solaris to the list of supported platforms.  This
    release puts all of the OpenSceneGraph functionality at the fingertips of
    Sun Microsystem's customers and developers.  Solaris users can now have
    the benefit of a high performance scene graph for visual simulation, 
    virtual reality, scientific visualization, CAD, and architectural 
    walk-throughs.  Many thanks to Sun for providing resources for the port.
    
    Additional html documentation has been added to the distribution to 
    make it easier to get an understanding of scene graph technology and
    the project itself and how to make use of it.  

    Support has also been added for OpenGL's texture cube mapping which
    is ideal for accurate environmental reflections and much more.
    
    The scene graph has been extended to allow multiple projection (via
    the new osg::Projection node) and viewports within one scene graphs, 
    this makes it much easier to set up head up displays, and we have 
    an example to demonstrate how easy it is - osghud.
    
    The osgUtil::CullVisitor and osgUtil::SceneView has been revamped 
    removing the dependency on osg::Camera, which is now simply an
    option for SceneView rather than a requirement.  This allows users
    to set the camera entirely with the scene graph or create their own